# task-tracker

./: pyproject.toml
jira_proxy/: __main__.py  entities.py  services.py
jira_proxy/api/: issues.py  users.py
jira_proxy/openapi/: api.yaml
task_tracker/: __main__.py  services.py  storage.py
task_tracker/api/: issues.py
task_tracker/openapi/: api.yaml
tests/: manual_db.py  test_gantt.py  test_jira_proxy.py  test_task_tracker.py
