[tool.poetry]
name = "task-tracker"
version = "0.1.0"
description = ""
authors = ["intey <ziexe0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
connexion = {extras = ["swagger-ui"], version = "^2.7.0"}
aiohttp_jinja2 = "^1.4.2"
motor = "^2.3.1"
loguru = "^0.5.3"
aioredis = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.20.0"
mypy = "^0.800"
mimesis = "^4.1.3"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
